--- a/ceevee/index.html
+++ b/ceevee/index.html
@@ -110,12 +110,12 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Ananya Singh</span><br>
+						   <span>Vit Vellore<br>
+						         
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span> 88009 79004</span><br>
+                     <span>singhananya2002@gmail.com</span>
 					   </p>
 
                </div>
