--- a/ceevee/index.html
+++ b/ceevee/index.html
@@ -112,7 +112,7 @@
                   <p class="address">
 						   <span>Ananya Singh</span><br>
 						   <span>Vit Vellore<br>
-						         
+						         Vellore, Tamil Nadu
                      </span><br>
 						   <span> 88009 79004</span><br>
                      <span>singhananya2002@gmail.com</span>
@@ -122,7 +122,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://docs.google.com/document/d/1Dxi9BqaBuHk91Fq7HVEW7plxh_As5loWMrBZ1BHCnhQ/edit" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -153,8 +153,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Vellore Institute of Technology</h3>
+                  <p class="info">Btech in Electronics and communication Engineering <span>&bull;</span> <em class="date">June 2020</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -171,8 +171,8 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Indian Institute of Technology IIT</h3>
+                  <p class="info">, Madras — BSc in Data Science and Programming<span>&bull;</span> <em class="date">SEPTEMBER 2021</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
