--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                         <img alt="" src="images/portfolio/modals/m-retrocam.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Webdesign</p>
+          					      <h5>Arduino</h5>
+                              <p>Electronics</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -379,8 +379,8 @@
                         <img alt="" src="images/portfolio/into-the-light.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>coming soon</h5>
+                              <p>coming soon</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -396,8 +396,8 @@
                         <img alt="" src="images/portfolio/farmerboy.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Farmer Boy</h5>
-                              <p>Branding</p>
+          					      <h5>coming soon</h5>
+                              <p>coming soon</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -413,8 +413,8 @@
                         <img alt="" src="images/portfolio/girl.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Girl</h5>
-                              <p>Photography</p>
+          					      <h5>coming soon</h5>
+                              <p>coming soon</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -430,8 +430,8 @@
                         <img alt="" src="images/portfolio/origami.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Origami</h5>
-                              <p>Illustrration</p>
+          					      <h5>coming soon</h5>
+                              <p>coming soon</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -447,8 +447,8 @@
                         <img alt="" src="images/portfolio/retrocam.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Retrocam</h5>
-                              <p>Web Development</p>
+          					      <h5>coming soon</h5>
+                              <p>coming soon</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
