--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Happy birthday Ananya</title>
+	<title>Ananya Singh</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
